[gd_scene load_steps=6 format=2]

[ext_resource path="res://font/sillrium_dynafont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/ui/menu/pause_menu/pause_menu.gd" type="Script" id=2]
[ext_resource path="res://streams/music/bgm_select.ogg" type="AudioStream" id=3]

[sub_resource type="Animation" id=2]
resource_name = "In"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorBG:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0313726, 0.054902, 0.14902, 0 ), Color( 0.0313726, 0.054902, 0.14902, 0.501961 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PauseText:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Out"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorBG:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0313726, 0.054902, 0.14902, 0.501961 ), Color( 0.0313726, 0.054902, 0.14902, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PauseText:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 128
script = ExtResource( 2 )

[node name="ColorBG" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0313726, 0.054902, 0.14902, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseText" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.025
anchor_top = 1.0
anchor_right = 0.025
anchor_bottom = 1.0
margin_top = -55.0
margin_right = 250.0
mouse_filter = 2
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[wave]PAUSED"
visible_characters = 0
percent_visible = 0.0
text = "PAUSED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoolPauseMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0
bus = "Music"

[node name="Animator" type="AnimationPlayer" parent="."]
anims/In = SubResource( 2 )
anims/Out = SubResource( 3 )
